--- a/birds/package.json
+++ b/birds/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "homepage":"https://sophie-from.github.io/birds/#",
+  "homepage": "https://sophie-from.github.io/birds/#",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -11,7 +11,8 @@
     "preview": "vite preview",
     "start": "node server.js",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -d build",
+    "clean": "rimraf dist"
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.0.6",
@@ -22,6 +23,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-error-boundary": "^5.0.0",
+    "rimraf": "^6.0.1",
     "tailwindcss": "^4.0.6"
   },
   "devDependencies": {
